# Generated by Django 5.0 on 2023-12-21 07:54

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('main', '0007_logisticfleet_logisticcost'),
    ]

    operations = [
        migrations.CreateModel(
            name='ProductPrice',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cogs_price', models.DecimalField(decimal_places=4, max_digits=12)),
                ('historical_price', models.DecimalField(decimal_places=4, max_digits=12)),
                ('historical_price_margin', models.DecimalField(decimal_places=2, max_digits=5)),
                ('best_price', models.DecimalField(decimal_places=4, max_digits=12)),
                ('best_price_margin', models.DecimalField(decimal_places=2, max_digits=5)),
                ('recommended_price', models.DecimalField(decimal_places=4, max_digits=12)),
                ('recommended_price_margin', models.DecimalField(decimal_places=2, max_digits=5)),
                ('product', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='main.product')),
            ],
        ),
    ]
